unpackaged/main/default/objects/Rating_Submitted__e/Rating_Submitted__e.object-meta.xml
<CustomObject>
    <label>Rating Submitted</label>
    <pluralLabel>Ratings Submitted</pluralLabel>
</CustomObject>