unpackaged/main/default/objects/Rating_Submitted__e/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>26</length>
    <type>Text</type>
</CustomField>