unpackaged/main/default/objects/Rating_Submitted__e/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>A contact's first name</description>
    <label>FirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>