unpackaged/main/default/objects/Rating_Submitted__e/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>A contact&#39;s surname</description>
    <label>LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>