unpackaged/main/default/objects/Rating_Submitted__e/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>