unpackaged/main/default/objects/Rating_Submitted__e/fields/Rating_Id__c.field-meta.xml
<CustomField>
    <fullName>Rating_Id__c</fullName>
    <label>Rating Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>