unpackaged/main/default/objects/Rating_Submitted__e/fields/Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Team_Id__c</fullName>
    <label>Team_Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>